# seel

./: .gitignore  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  implementation_plan.md  prompt.txt  requirements.txt
risc0-guest/: Cargo.toml
risc0-guest/src/: main.rs
seel/: bundle_builder.py  constraint_checker.py  ezkl_attestor.py  inference_runner.py  keygen.py  mock_attestor.py  model_loader.py  risc0_attestor.py  seel_cli.py  utils.py  verify_cli.py
seel/constraints/: default.json
